--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html><head><title>正在跳转</title></head>
 <body>
-<script language='javascript'>document.location = 'http://www.kaigesheji.com/wangzhanjianshe/'</script>
+<script language='javascript'>document.location = 'http://jucongyuan.com'</script>
 </body>
 </html>
